--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.5"
+        "laravelcollective/html": "^5.5",
+        "yajra/laravel-datatables-oracle": "^8.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -24,6 +25,7 @@
             "database/seeds",
             "database/factories"
         ],
+        
         "psr-4": {
             "App\\": "app/"
         }
@@ -31,7 +33,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files":[
+            "app/help/helper.php"
+        ]
     },
     "extra": {
     "laravel": {
