--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "sweetalert": "^2.0.5",
+        "sweetalert2": "^6.10.2"
     }
 }
